--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -58,7 +58,6 @@ http {
     # Lua 包路径
     lua_package_path "/usr/local/openresty/lua/?.lua;;";
     lua_shared_dict cache 10m;
-    lua_ssl_trusted_certificate /etc/ssl/certs/ca-certificates.addn.crt;
 
     # 解析器设置
     resolver kube-dns.kube-system.svc.cluster.local valid=30s;
@@ -76,8 +75,22 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-        # 健康检查端点
-        location /health {
+        # 主要代理逻辑
+        location / {
+            # 使用 Lua 脚本处理请求
+            content_by_lua_block {
+                local oss_proxy = require "oss_proxy"
+                oss_proxy.handle_request()
+            }
+        }
+
+
+    }
+
+    server {
+        listen 9181;
+
+        location /healthz {
             access_log off;
             content_by_lua_block {
                 local crd_watcher = require "crd_watcher"
@@ -94,6 +107,10 @@ http {
         location /metrics {
             access_log off;
             content_by_lua_block {
+                local crd_watcher = require "crd_watcher"
+                local status = crd_watcher.get_cache_status()
+                
+                -- Nginx 连接指标
                 ngx.say("# HELP nginx_connections_active Active connections")
                 ngx.say("# TYPE nginx_connections_active gauge")
                 ngx.say("nginx_connections_active ", ngx.var.connections_active)
@@ -109,23 +126,279 @@ http {
                 ngx.say("# HELP nginx_connections_waiting Waiting connections")
                 ngx.say("# TYPE nginx_connections_waiting gauge")
                 ngx.say("nginx_connections_waiting ", ngx.var.connections_waiting)
+                
+                -- CRD 缓存指标
+                ngx.say("# HELP ossfe_proxy_ready Proxy ready status (1=ready, 0=not ready)")
+                ngx.say("# TYPE ossfe_proxy_ready gauge")
+                ngx.say("ossfe_proxy_ready ", status.ready and 1 or 0)
+                
+                ngx.say("# HELP ossfe_proxy_synced_once Initial sync completed status (1=completed, 0=not completed)")
+                ngx.say("# TYPE ossfe_proxy_synced_once gauge")
+                ngx.say("ossfe_proxy_synced_once ", status.synced_once and 1 or 0)
+                
+                ngx.say("# HELP ossfe_proxy_routes_total Total number of cached routes")
+                ngx.say("# TYPE ossfe_proxy_routes_total gauge")
+                ngx.say("ossfe_proxy_routes_total ", status.route_count)
+                
+                ngx.say("# HELP ossfe_proxy_upstreams_total Total number of cached upstreams")
+                ngx.say("# TYPE ossfe_proxy_upstreams_total gauge")
+                ngx.say("ossfe_proxy_upstreams_total ", status.upstream_count)
+                
+                ngx.say("# HELP ossfe_proxy_secrets_total Total number of cached secrets")
+                ngx.say("# TYPE ossfe_proxy_secrets_total gauge")
+                ngx.say("ossfe_proxy_secrets_total ", status.secret_count)
+                
+                ngx.say("# HELP ossfe_proxy_last_sync_timestamp Last sync timestamp (unix time)")
+                ngx.say("# TYPE ossfe_proxy_last_sync_timestamp gauge")
+                ngx.say("ossfe_proxy_last_sync_timestamp ", status.last_sync)
+                
+                ngx.say("# HELP ossfe_proxy_resource_version Current resource version")
+                ngx.say("# TYPE ossfe_proxy_resource_version gauge")
+                ngx.say("ossfe_proxy_resource_version ", status.version)
             }
             add_header Content-Type text/plain;
         }
 
-        # 主要代理逻辑
-        location / {
-            # 使用 Lua 脚本处理请求
-            content_by_lua_block {
-                local oss_proxy = require "oss_proxy"
-                oss_proxy.handle_request()
-            }
-        }
+    }
 
-        # 错误页面
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-            root /usr/local/openresty/nginx/html;
+    server {
+        listen 127.0.0.1:9180;
+        location = / {
+            return 200 'go to /api';
+        }
+        # API 端点供 Go watcher 调用
+        location /api/ {
+            access_log off;
+            
+            # 更新路由
+            location ~ ^/api/routes/update$ {
+                content_by_lua_block {
+                    local crd_watcher = require "crd_watcher"
+                    local json = require "cjson"
+                    
+                    if ngx.var.request_method ~= "POST" then
+                        ngx.status = 405
+                        ngx.say("Method not allowed")
+                        return
+                    end
+                    
+                    ngx.req.read_body()
+                    local body = ngx.req.get_body_data()
+                    if not body then
+                        ngx.status = 400
+                        ngx.say("Missing request body")
+                        return
+                    end
+                    
+                    local ok, route_data = pcall(json.decode, body)
+                    if not ok then
+                        ngx.status = 400
+                        ngx.say("Invalid JSON")
+                        return
+                    end
+                    
+                    local success, err = crd_watcher.update_route(route_data)
+                    if not success then
+                        ngx.status = 400
+                        ngx.say(err or "Update failed")
+                        return
+                    end
+                    
+                    ngx.say("OK")
+                }
+            }
+            
+            # 删除路由
+            location ~ ^/api/routes/delete$ {
+                content_by_lua_block {
+                    local crd_watcher = require "crd_watcher"
+                    local json = require "cjson"
+                    
+                    if ngx.var.request_method ~= "POST" then
+                        ngx.status = 405
+                        ngx.say("Method not allowed")
+                        return
+                    end
+                    
+                    ngx.req.read_body()
+                    local body = ngx.req.get_body_data()
+                    if not body then
+                        ngx.status = 400
+                        ngx.say("Missing request body")
+                        return
+                    end
+                    
+                    local ok, route_data = pcall(json.decode, body)
+                    if not ok then
+                        ngx.status = 400
+                        ngx.say("Invalid JSON")
+                        return
+                    end
+                    
+                    local success, err = crd_watcher.delete_route(route_data)
+                    if not success then
+                        ngx.status = 400
+                        ngx.say(err or "Delete failed")
+                        return
+                    end
+                    
+                    ngx.say("OK")
+                }
+            }
+            
+            # 更新 upstream
+            location ~ ^/api/upstreams/update$ {
+                content_by_lua_block {
+                    local crd_watcher = require "crd_watcher"
+                    local json = require "cjson"
+                    
+                    if ngx.var.request_method ~= "POST" then
+                        ngx.status = 405
+                        ngx.say("Method not allowed")
+                        return
+                    end
+                    
+                    ngx.req.read_body()
+                    local body = ngx.req.get_body_data()
+                    if not body then
+                        ngx.status = 400
+                        ngx.say("Missing request body")
+                        return
+                    end
+                    
+                    local ok, upstream_data = pcall(json.decode, body)
+                    if not ok then
+                        ngx.status = 400
+                        ngx.say("Invalid JSON")
+                        return
+                    end
+                    
+                    local success, err = crd_watcher.update_upstream(upstream_data)
+                    if not success then
+                        ngx.status = 400
+                        ngx.say(err or "Update failed")
+                        return
+                    end
+                    
+                    ngx.say("OK")
+                }
+            }
+            
+            # 删除 upstream
+            location ~ ^/api/upstreams/delete$ {
+                content_by_lua_block {
+                    local crd_watcher = require "crd_watcher"
+                    local json = require "cjson"
+                    
+                    if ngx.var.request_method ~= "POST" then
+                        ngx.status = 405
+                        ngx.say("Method not allowed")
+                        return
+                    end
+                    
+                    ngx.req.read_body()
+                    local body = ngx.req.get_body_data()
+                    if not body then
+                        ngx.status = 400
+                        ngx.say("Missing request body")
+                        return
+                    end
+                    
+                    local ok, upstream_data = pcall(json.decode, body)
+                    if not ok then
+                        ngx.status = 400
+                        ngx.say("Invalid JSON")
+                        return
+                    end
+                    
+                    local success, err = crd_watcher.delete_upstream(upstream_data)
+                    if not success then
+                        ngx.status = 400
+                        ngx.say(err or "Delete failed")
+                        return
+                    end
+                    
+                    ngx.say("OK")
+                }
+            }
+            
+            # 更新 secret
+            location ~ ^/api/secrets/update$ {
+                content_by_lua_block {
+                    local crd_watcher = require "crd_watcher"
+                    local json = require "cjson"
+                    
+                    if ngx.var.request_method ~= "POST" then
+                        ngx.status = 405
+                        ngx.say("Method not allowed")
+                        return
+                    end
+                    
+                    ngx.req.read_body()
+                    local body = ngx.req.get_body_data()
+                    if not body then
+                        ngx.status = 400
+                        ngx.say("Missing request body")
+                        return
+                    end
+                    
+                    local ok, secret_data = pcall(json.decode, body)
+                    if not ok then
+                        ngx.status = 400
+                        ngx.say("Invalid JSON")
+                        return
+                    end
+                    
+                    local success, err = crd_watcher.update_secret(secret_data)
+                    if not success then
+                        ngx.status = 400
+                        ngx.say(err or "Update failed")
+                        return
+                    end
+                    
+                    ngx.say("OK")
+                }
+            }
+            
+            # 删除 secret
+            location ~ ^/api/secrets/delete$ {
+                content_by_lua_block {
+                    local crd_watcher = require "crd_watcher"
+                    local json = require "cjson"
+                    
+                    if ngx.var.request_method ~= "POST" then
+                        ngx.status = 405
+                        ngx.say("Method not allowed")
+                        return
+                    end
+                    
+                    ngx.req.read_body()
+                    local body = ngx.req.get_body_data()
+                    if not body then
+                        ngx.status = 400
+                        ngx.say("Missing request body")
+                        return
+                    end
+                    
+                    local ok, secret_data = pcall(json.decode, body)
+                    if not ok then
+                        ngx.status = 400
+                        ngx.say("Invalid JSON")
+                        return
+                    end
+                    
+                    local success, err = crd_watcher.delete_secret(secret_data)
+                    if not success then
+                        ngx.status = 400
+                        ngx.say(err or "Delete failed")
+                        return
+                    end
+                    
+                    ngx.say("OK")
+                }
+            }
+            
+
         }
     }
 }
