refactor(crd_watcher): use shared dict to keep cache consistency

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -60,6 +60,7 @@ http {
     lua_shared_dict cache 10m;
     lua_shared_dict metrics 20m;
     lua_shared_dict counters 10m;
+    lua_shared_dict crd_cache 20m;
 
     # 解析器设置
     resolver kube-dns.kube-system.svc.cluster.local valid=30s;
